<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="6dp"
    android:layout_margin="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <!-- Header -->
        <LinearLayout
            android:id="@+id/cardHeader"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:background="#FFF"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/resultCardHeader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="30dp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/SPI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spi"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/PPI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ppi"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/resultExpandable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardHeader"
            android:background="#26C6DA"
            android:orientation="vertical"
            android:visibility="gone" >

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/resultSemester"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <TableRow>

                    <TextView
                        android:text="@string/sub_name"
                        android:padding="15dp" />

                    <TextView
                        android:text="@string/sub_code"
                        android:padding="15dp" />

                    <TextView
                        android:text="@string/sub_credit"
                        android:padding="15dp" />

                    <TextView
                        android:text="@string/sub_grade"
                        android:padding="15dp" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>