<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.ac.nirmauni.sa3.LoginActivity">


    <!-- Login progress -->
    <com.rey.material.widget.ProgressView android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:pv_autostart="true"
        app:pv_circular="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_gravity="center"
        app:pv_progressStyle="@style/Material.Drawable.CircularProgress"
        app:pv_progressMode="indeterminate"/>

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center"
            android:orientation="vertical">

            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:ems="6" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1" android:gravity="center"
                android:singleLine="true" android:layout_gravity="center" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:layout_gravity="center"
                android:gravity="center"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <com.rey.material.widget.Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:padding="16dp"
                android:layout_gravity="center"
                style="@style/Material.Drawable.Ripple.Wave"
                app:rd_enable="true"
                app:rd_delayClick="afterRelease"
                backgroundColor="#FF22F2"
                />

            <Button android:id="@+id/email_sign_up_button" style="?android:textAppearanceSmall"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_up"
                android:textStyle="bold" android:layout_gravity="center"
                android:padding="20dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>